# blueye.protocol

./: .flake8  .fury.yml  .gitignore  .gitmodules  Pipfile  README.md  generate_all.sh  generate_c.py  generate_html.py  generate_python.py  header2json.py  make_html.py  protocol.json  pyproject.toml  setup.cfg  setup.py  tasks.py  tcp_protocol.json  udp_protocol.json
.github/workflows/: PythonTests.yml  publish-release.yml  pythonpackage.yml  tests.yml  update-protocol.yml
blueye/legacyprotocol/: tcp_client.py  udp_client.py  udp_protocol_dict.py  udp_protocol_parser.py
blueye/protocol/: __init__.py  exceptions.py  protocol_data.py  protos.py  tcp_client.py  tcp_protocol_class.py  udp_client.py  udp_protocol_dict.py  udp_protocol_parser.py
blueye/protocol/templates/: protocol_class.template
blueye/protocol/tests/: test_protocol.py  test_protocol_data.py  test_tcp_client.py  test_udp_client.py
blueye/protocol/types/: __init__.py  aquatroll.py  control.py  message_formats.py  mission_planning.py  req_rep.py  telemetry.py
blueye/protocol/v2/: udp_client.py  udp_protocol_dict.py  udp_protocol_parser.py
blueye/protocol/v3/: __init__.py
c/: CMakeLists.txt  p2_app_protocol.h
generators/: generate_tcp_protocol.py  generate_udp_protocol.py
generators/templates/: protocol_class.template
generators/templates/templates/%namespace/%name_%version/%sub/: __init__.py.j2
generators/templates/templates/%namespace/%name_%version/%sub/types/: _enum.py.j2
html/: protocol.html
legacyprotocol/: README.md  pyproject.toml
legacyprotocol/blueye/legacyprotocol/: __init__.py  tcp_client.py  udp_client.py  udp_protocol_dict.py  udp_protocol_parser.py
legacyprotocol/tests/: test_protocol.py  test_protocol_data.py  test_tcp_client.py  test_udp_client.py
protocol/: README.md  pyproject.toml
protocol/blueye/protocol/: __init__.py  exceptions.py  protos.py
protocol/blueye/protocol/types/: __init__.py  aquatroll.py  control.py  message_formats.py  mission_planning.py  req_rep.py  telemetry.py
python/: .gitignore  README.txt  generate_message_functions.py  generate_tcp_protocol.py  generator_python.py  pyproject.toml  setup.py  test_protocol.py  test_protocol_data.py  test_tcp_client.py  test_udp_client.py
python/p2_app_protocol/: __init__.py  drone_commands.py  exceptions.py  message_methods.py  protocol.py  protocol_data.py  tcp_client.py  tcp_protocol.json  tcp_protocol_class.py  udp_client.py
python/p2_app_protocol/data/: protocol.json
python/p2_app_protocol/templates/: protocol_class.template  protocol_class_template.py  protocol_selector_class.template  send_command_function.template  send_command_function_template.py
python/tests/: test_protocol.py  test_protocol_data.py  test_tcp_client.py  test_udp_client.py
tests/: test_protocol.py  test_protocol_data.py  test_tcp_client.py  test_udp_client.py
