[project]
name = "blueye.protocol"
version = "3.0.0"
description = "Python protocol definition for the Blueye drones"
authors = [
    { name = "Sindre Hansen", email = "sindre.hansen@blueye.no" },
    { name = "Johannes Schrimpf", email = "johannes.schrimpf@blueye.no" },
    { name = "Aksel Lenes", email = "aksel.lenes@blueye.no" },
    { name = "Alexander Vedeler", email = "alexander.vedeler@blueye.no" },
]
requires-python = "~=3.10"
readme = "README.md"
license = "LGPL-3.0"
keywords = ["Blueye", "Robotics", "Protocol"]
dependencies = ["numpy~=2.2", "setuptools>=75.8", "proto-plus~=1.25"]

[project.urls]
Homepage = "https://www.blueyerobotics.com"
Repository = "https://github.com/blueye-robotics/blueye.protocol"

[dependency-groups]
dev = [
    "Jinja2~=3.0",
    "pytest~=8.3",
    "pytest-mock~=3.14",
    "pytest-timeout~=2.3",
    "invoke>=2.1.1,<3",
    "pytest-cov~=6.0",
    "toml>=0.10.0,<0.11",
    "flake8~=7.1",
    "packaging>=24.0",
]

[tool.hatch.build.targets.sdist]
include = ["blueye"]

[tool.hatch.build.targets.wheel]
include = ["blueye"]
