[project]
name = "blueye.protocol"
version = "3.0.0"
description = "Python protocol definition for the Blueye drones"
authors = [{ name = "Blueye Robotics", email = "contact@blueye.no" }]
requires-python = ">=3.10, <4"
readme = "README.md"
license = "LGPL-3.0"
keywords = ["Blueye", "Robotics", "Protocol"]
dependencies = ["proto-plus~=1.25"]

[project.optional-dependencies]
legacy = ["blueye.legacyprotocol >= 0.1"]

[project.urls]
Homepage = "https://www.blueyerobotics.com"
Repository = "https://github.com/blueye-robotics/blueye.protocol"

[dependency-groups]
dev = [
    "Jinja2~=3.0",
    "pytest~=8.3",
    "pytest-mock~=3.14",
    "pytest-timeout~=2.3",
    "invoke>=2.1.1,<3",
    "pytest-cov~=6.0",
    "toml>=0.10.0,<0.11",
    "flake8~=7.1",
    "packaging>=24.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
namespaces = true
#where = ["blueye"]
