[tool.poetry]
name = "BlueyePioneerProtocol"
version = "1.1.0"
description = "Python protocol definition for the Blueye Pioneer"
authors = ["Sindre Hansen <sindre.hansen@blueye.no>",
           "Johannes Schrimpf <johannes.schrimpf@blueye.no>",
           "Aksel Lenes <aksel.lenes@blueye.no>",
          ]
license = "LGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
Jinja2 = "^2.10"
pytest = "^5.1"
pytest-mock = "^1.10"
numpy = "^1.17"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
